🐛BUG FIX: overflow x hidden

--- a/app/globals.css
+++ b/app/globals.css
@@ -82,9 +82,9 @@
   }
 }
 
-/* * {
-  color: #979797;
-} */
+* {
+  overflow-x: hidden;
+}
 
 @layer base {
   * {
